--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,10 @@
 }
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  background-color: #ddd;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
