--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: #ddd;
+  background-color: #868e96;
   width: 100vw;
   height: 100vh;
   display: flex;
