--- a/src/page/numberpad/styles.module.css
+++ b/src/page/numberpad/styles.module.css
@@ -59,3 +59,20 @@
 .buttonAction:target {
   background-color: #000;
 }
+
+@media (max-width: 767px) {
+  .numberpadWrapper {
+    width: 32vh;
+    height: 32vh;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .actionsWrapper {
+    width: 32vh;
+    height: 8vh;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+}
