--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+@media (max-width: 767px) {
+  body {
+    font-size: 12px;
+  }
+}
